--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,25 +11,32 @@
       <a
         href="tel:+380684439426"
         class="mobile-menu-address-link"
-        terget="_blank"
+        target="_blank"
         >+380 (68) 443-94-26</a
       >
     </address>
 
     <ul class="mobile-menu-list">
       <li class="mobile-menu-list-item">
-        <a href="#about" class="mobile-menu-list-item-link">About us</a>
+        <a href="#about" class="mobile-menu-list-item-link" target="_blank"
+          >About us</a
+        >
       </li>
       <li class="mobile-menu-list-item">
-        <a href="#collection" class="mobile-menu-list-item-link"
+        <a href="#collection" class="mobile-menu-list-item-link" target="_blank"
           >Our collection
         </a>
       </li>
       <li class="mobile-menu-list-item">
-        <a href="#order" class="mobile-menu-list-item-link">Customer order</a>
+        <a href="#order" class="mobile-menu-list-item-link" target="_blank"
+          >Customer order</a
+        >
       </li>
       <li class="mobile-menu-list-item">
-        <a href="#testimonials" class="mobile-menu-list-item-link"
+        <a
+          href="#testimonials"
+          class="mobile-menu-list-item-link"
+          target="_blank"
           >TEstimonials</a
         >
       </li>
@@ -80,7 +87,7 @@
 
     <!-- CONTACTS -->
     <address class="header-address">
-      <a href="tel:+380684439426" class="header-address-link" terget="_blank"
+      <a href="tel:+380684439426" class="header-address-link" target="_blank"
         >+380 (68) 443-94-26</a
       >
     </address>
