--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,12 +1,13 @@
 <!-- MOBILE MENU -->
 <div class="mobile">
   <div class="mobile-menu">
+    <!-- MOBILE CLOSE BUTTON -->
     <button class="mobile-menu-btn" type="button">
       <svg class="mobile-menu-btn-icon" width="36" height="36">
         <use href="./img/sprite.svg#icon-close"></use>
       </svg>
     </button>
-    <!-- CONTACTS -->
+    <!-- MOBILE CONTACTS -->
     <address class="mobile-menu-address">
       <a
         href="tel:+380684439426"
@@ -16,6 +17,7 @@
       >
     </address>
 
+    <!-- MOBILE NAV -->
     <ul class="mobile-menu-list">
       <li class="mobile-menu-list-item">
         <a href="#about" class="mobile-menu-list-item-link" target="_blank"
@@ -92,6 +94,7 @@
       >
     </address>
 
+    <!-- SOCIAL NETWORKS -->
     <div class="header-social">
       <ul class="header-social-list">
         <li class="header-social-list-item">
@@ -128,7 +131,7 @@
           </a>
         </li>
       </ul>
-
+      <!-- BURGER BUTTON -->
       <button class="header-burger-btn" type="button">
         <svg class="header-burger-btn-icon" width="44" height="30">
           <use href="./img/sprite.svg#icon-burger"></use>
