--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -1,4 +1,5 @@
-<section class="container"  id="testimonials">
+<section class="section" id="testimonials">
+    <div class="container">
     <h2 class="testimonials-title">Testimonials</h2>
     <ul class="testimonials-list">
         <li class="testimonials-list-item">
@@ -28,4 +29,5 @@
         symbol of our beauty and national pride.</p>
     </li>
     </ul>
+    </div>
 </section>
