--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -105,7 +105,7 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 1200px) {
         justify-content: center;
         height: 545px;
         gap: 50px;
-       
+       width: 1080px;
     }
     .about-image {
         margin-top: 0;
