--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -2,9 +2,7 @@
 .about-text {
   color: rgba(252, 249, 249, 0.4);
   font-family: Manrope;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
+  font-size: 14px;
   line-height: normal;
   letter-spacing: 0.04em;
   margin-bottom: 20px;
@@ -14,8 +12,7 @@
 .about-title {
   color: #fcf9f9;
   font-family: Manrope;
-  font-size: 44px;
-  font-style: normal;
+  font-size: 32px;
   font-weight: 500;
   line-height: 1.45; /* 145.455% */
   letter-spacing: 0.03em;
@@ -23,9 +20,15 @@
   margin-bottom: 40px;
 }
 
+.about-text-container {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .about-image {
     display: block;
 }
+
 
 
 
@@ -90,6 +93,18 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 1200px) {
 /*===========TABLET STYLE============*/
 
 @media screen and (min-width: 768px) {
+
+    .about-text-container {
+        padding: 0;
+    }
+
+    .about-title {
+        font-size: 44px;
+    }
+
+    .about-text {
+        font-size: 16px;
+    }
 
     .about-image {
         margin-top: 40px;
