--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -37,10 +37,11 @@
           rows="10"
           cols="30"
         ></textarea>
-        <a class="your-order-link" href="index.html"
-          >Send<svg class="your-order-icon" width="26" height="10">
-            <use></use></svg
-        ></a>
+        <button class="your-order-link" href="index.html" button></button>
+          Send<svg class="your-order-icon" width="26" height="10">
+            <use></use>
+          </svg>
+        </button>
       </div>
     </form>
   </div>
