--- a/src/css/header.css
+++ b/src/css/header.css
@@ -37,18 +37,16 @@ button {
 }
 
 .mobile-menu {
-  padding: 20px 20px 0 20px;
+  padding-top: 20px;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  gap: 198px;
-  position: relative;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 768px) {
   .mobile-menu {
-    padding: 40px 40px 0 40px;
+    padding-top: 40px;
   }
 }
 
@@ -77,6 +75,13 @@ button {
 
 .mobile-menu-address {
   align-self: flex-start;
+  padding-left: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu-address {
+    padding-left: 40px;
+  }
 }
 
 .mobile-menu-address-link {
@@ -105,11 +110,13 @@ button {
   align-self: flex-end;
   text-align: end;
   gap: 20px;
+  padding-right: 20px;
 }
 
 @media screen and (min-width: 768px) {
   .mobile-menu-list {
     gap: 25px;
+    padding-right: 40px;
   }
 }
 
@@ -129,9 +136,6 @@ button {
 }
 
 .mobile-menu-image {
-  position: absolute;
-  left: 0;
-  bottom: 0;
   width: 100%;
   height: 302px;
   background: url(../img/header/background-mobmenu.png);
@@ -177,7 +181,6 @@ button {
 }
 
 .header.scrolled {
-  padding-top: 20px;
   padding-bottom: 10px;
   border-bottom: 1px solid rgba(24, 23, 23, 0.8);
 }
@@ -206,6 +209,12 @@ button {
   }
 }
 
+@media screen and (min-width: 1440px) {
+  .header .container {
+    min-width: 1440px;
+  }
+}
+
 .header-nav {
   display: flex;
   align-items: center;
@@ -226,6 +235,12 @@ button {
   .header-nav-menu {
     display: block;
     margin-right: 129px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header-nav-menu {
+    margin-right: 289px;
   }
 }
 
@@ -276,6 +291,7 @@ button {
 .header-address-link:hover {
   border: 1px solid #ecd979;
 }
+
 .header-social {
   display: flex;
   align-items: center;
