--- a/src/css/our-collection.css
+++ b/src/css/our-collection.css
@@ -10,11 +10,13 @@
   }
 
   .our-collection {
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 
   .our-collection-title {
+    text-align: center;
+    margin-bottom: 40px;
   }
 
   .our-collection-list {
@@ -28,19 +30,15 @@
   }
 
   .collection-images {
+    width: 335px;
+    height: 430px;
+    margin-bottom: 18px;
   }
 
   .collection-images:hover {
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translateY(0%);
   }
 
   .our-collection-images {
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    border: 1px solid #e7e9fc;
-    background: #fff;
-    width: 288px;
-    height: 400px;
   }
 
   .our-collection-images:hover {
@@ -50,19 +48,56 @@
   }
 
   .our-collection-title-next {
+    color: var(--white, #fcf9f9);
+    font-family: Manrope;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 14px; /* 100% */
+    letter-spacing: 0.7px;
+    text-transform: uppercase;
+    margin-bottom: 8px;
   }
 
   .our-collection-text {
+    color: rgba(252, 249, 249, 0.4);
+    font-family: Manrope;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px; /* 100% */
+    letter-spacing: 0.7px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 320px;
+    width: 768px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+
+  .our-collection {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .our-collection-list {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-inline-start: 0;
+    grid-column-gap: 20px;
+    row-gap: 20px;
+  }
+
+  .collection-images {
+    width: 342px;
+    height: 430px;
   }
 }
 
@@ -71,7 +106,26 @@
     width: 320px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+
+  .our-collection {
+    padding-top: 150px;
+    padding-bottom: 150px;
+  }
+
+  .our-collection-list {
+    list-style-type: none;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 40px;
+  }
+
+  .collection-images {
+    width: 346px;
+    height: 430px;
   }
 }
