--- a/src/css/our-collection.css
+++ b/src/css/our-collection.css
@@ -11,12 +11,12 @@
 
   .our-collection {
     padding-top: 80px;
-    padding-bottom: 80px;
   }
 
   .our-collection-title {
     text-align: center;
     margin-bottom: 40px;
+    font-size: 32px;
   }
 
   .our-collection-list {
@@ -26,25 +26,13 @@
     flex-direction: column;
     padding-inline-start: 0;
     grid-column-gap: 24px;
-    row-gap: 48px;
+    row-gap: 16px;
   }
 
   .collection-images {
     width: 335px;
     height: 430px;
     margin-bottom: 18px;
-  }
-
-  .collection-images:hover {
-  }
-
-  .our-collection-images {
-  }
-
-  .our-collection-images:hover {
-  }
-
-  .our-collection-div-text {
   }
 
   .our-collection-title-next {
@@ -71,6 +59,11 @@
 }
 
 @media screen and (min-width: 768px) {
+
+  .our-collection-title {
+    font-size: 44px;
+  }
+
   .container {
     width: 768px;
     margin-left: auto;
@@ -81,7 +74,7 @@
 
   .our-collection {
     padding-top: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 25px;
   }
 
   .our-collection-list {
@@ -112,7 +105,7 @@
 
   .our-collection {
     padding-top: 150px;
-    padding-bottom: 150px;
+    padding-bottom: 75px;
   }
 
   .our-collection-list {
