fix collection img WAY

--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -7,7 +7,7 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          src="../img/collection/collection-1-mobile@2x.jpg"
+          src="./img/collection/collection-1-mobile@2x.jpg"
           alt="AUGUST Poltava women's blouseRING"
           width="335"
           height="430"
@@ -23,7 +23,7 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          src="../img/collection/collection-2-mobile@2x.jpg"
+          src="./img/collection/collection-2-mobile@2x.jpg"
           alt="Women's blouse Gorgany"
           width="335"
           height="430"
@@ -37,7 +37,7 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          src="../img/collection/collection-3-mobile@2x.jpg"
+          src="./img/collection/collection-3-mobile@2x.jpg"
           alt="Women's blouse Crimea"
           width="335"
           height="430"
@@ -51,7 +51,7 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          src="../img/collection/collection-4-mobile@2x.jpg"
+          src="./img/collection/collection-4-mobile@2x.jpg"
           alt="Men's shirt Verkhovina"
           width="335"
           height="430"
@@ -65,7 +65,7 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          src="../img/collection/collection-5-mobile@2x.jpg"
+          src="./img/collection/collection-5-mobile@2x.jpg"
           alt="Mountain men's shirt"
           width="335"
           height="430"
@@ -79,7 +79,7 @@
       <li class="our-collection-images">
         <img
           class="collection-images"
-          src="../img/collection/collection-6-mobile@2x.jpg"
+          src="./img/collection/collection-6-mobile@2x.jpg"
           alt="Men's shirt Yasens"
           width="335"
           height="430"
