--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,4 @@
-<section class="about-section">
+<section class="about-section" id="about">
   <div class="about-container container">
     <div class="about-text-container">
       <h2 class="about-title">About Us</h2>
@@ -8,16 +8,23 @@
         wide selection of high-quality and authentic embroidery, which combines
         the elegance of traditional needlework and modern design.
       </p>
-      <p class="about-text">
-        In "Vyshyvanka Vibes" you will find various models of embroidery, from
-        classic to modern, corresponding to the latest fashion trends. Our
-        embroidery is made using natural fabrics and is embroidered by highly
-        qualified craftsmen who convey the beauty of Ukrainian culture in every
-        detail.We believe that vyshyvanka is not just clothing, but a symbol of
-        national pride, the heritage of our ancestors and a way of expressing
-        one's individuality. Each embroidery from "Vyshyvanka Vibes" has its own
-        unique history and symbolism, which gives it a special meaning.
-      </p>
+      <details>
+        <summary>
+          <span id="open">read more...</span>
+          <span id="close">close</span>
+        </summary>
+        <p class="about-text">
+          In "Vyshyvanka Vibes" you will find various models of embroidery, from
+          classic to modern, corresponding to the latest fashion trends. Our
+          embroidery is made using natural fabrics and is embroidered by highly
+          qualified craftsmen who convey the beauty of Ukrainian culture in
+          every detail.We believe that vyshyvanka is not just clothing, but a
+          symbol of national pride, the heritage of our ancestors and a way of
+          expressing one's individuality. Each embroidery from "Vyshyvanka
+          Vibes" has its own unique history and symbolism, which gives it a
+          special meaning.
+        </p>
+      </details>
     </div>
     <img
       class="about-image"
