--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -1,6 +1,6 @@
 <!-- ============Our collection===============-->
 
-<section class="our-collection">
+<section class="our-collection" id="collection">
   <div class="container-our-collection container">
     <h2 class="our-collection-title">Our collection</h2>
     <ul class="our-collection-list">
