add-background-ornament

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer container">
-  <div class="footer-menu">
+<footer class="footer">
+  <div class="footer-menu container">
     <ul class="header-nav-list footer-list">
       <li class="header-nav-list-item">
         <a href="#about" class="header-nav-list-item-link">About us</a>
@@ -18,7 +18,6 @@
         >
       </li>
     </ul>
-
     <p class="slogan-content">
       A touch of <span class="slogan-span">Ukrainian</span> culture in every
       embroidery
