--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -6,16 +6,43 @@ main {
 	flex-grow: 1;
 }
 
-.footer {
+.footer-menu {
 	border-top: 1px solid rgba(252, 249, 249, 0.10);
-
+	background-image: url(../img/footer/footer-background.png);
+	background-repeat: no-repeat;
+	background-size: 450px 400px;
+	background-position-y: 175%;
+	background-position-x: 50%;
 }
 
+@media screen and (min-width: 768px) {
+	.footer-menu {
+		background-position-y: 50%;
+		background-position-x: 185%;
+	}
+}
+
+@media screen and (min-width: 1280px) {
+	.footer-menu {
+		background-size: 595px 527px;
+		background-position-y: 40%;
+		background-position-x: 138%;
+	}
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 320px),
+screen and (min-resolution: 2dppx) and (min-width: 320px),
+screen and (min-device-pixel-rario: 2) and (min-width:320px) {
+	.footer-menu {
+		background-image: url(../img/footer/footer-background@2x.png);
+	}
+}
 
 /* ======== MENU =============== */
 .footer-menu {
 	display: block;
 	padding-top: 40px;
+
 }
 
 .footer-list {
@@ -38,7 +65,7 @@ main {
 	letter-spacing: -0.03em;
 	width: 335px;
 	padding-top: 40px;
-	padding-bottom: 80px;
+	padding-bottom: 290px;
 }
 
 .slogan-span {
