--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -1,3 +1,7 @@
+.section.testimonials {
+  padding-bottom: 80px;
+}
+
 @media (max-width: 375px) {
   .container {
     width: 100%;
@@ -14,6 +18,11 @@
     width: 768px;
     padding-left: 32px;
     padding-right: 32px;
+  }
+
+  .section.testimonials {
+    padding-top: 50px;
+    padding-bottom: 100px;
   }
 }
 @media (min-width: 1280px) {
@@ -108,6 +117,12 @@
 }
 
 @media (min-width: 1280px) {
+
+  .section.testimonials {
+      padding-top: 75px;
+      padding-bottom: 150px;
+    }
+
   .testimonials-list {
     gap: 26px;
     flex-basis: calc((100%-52px) / 3);
