--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -1,4 +1,4 @@
-<section class="section" id="testimonials">
+<section class="section testimonials" id="testimonials">
   <div class="container">
     <h2 class="testimonials-title">Testimonials</h2>
     <ul class="testimonials-list">
