--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -1,12 +1,14 @@
 <section class="your-order-section">
   <div class="container">
+    <img class="your-order-images" src="../img/order/order-background-desktop-max.jpg ./order/order-background-desktop-max@2x.jpg ./order/order-background-desktop-min.jpg ./order/order-background-desktop-min@2x.jpg ./order/order-background-mobile.jpg ./order/order-background-mobile@2x.jpg ./order/order-background-tablet.jpg ./order/order-background-tablet@2x.jpg" alt="a_girl_in_a_green_dress">
+<img class="your-order-picture" src="../img/order/order-img-desktop.jpg ./img/order/order-img-desktop@2x.jpg" alt="dress_and_waistcoat" />
     <h2 class="your-order">
       Your order
       <span class="your-order-span"
         >is our priority: Personalized approach and quality of service</span
       >
     </h2>
-    <img src="" alt="dress_and_waistcoat" />
+    
     <form class="your-order-form">
       <div class="your-order-input-container">
         <label class="" for="your-order--label">
@@ -29,7 +31,7 @@
         ></label>
       </div>
       <div>
-        <textarea
+        <textarea type="pattern"
           class="your-order-textarea"
           name="user-coment"
           placeholder="Comments"
@@ -37,9 +39,9 @@
           rows="10"
           cols="30"
         ></textarea>
-        <button class="your-order-link" href="index.html" button></button>
+        <button class="your-order-link" href="index.html" type="pattern"></button>
           Send<svg class="your-order-icon" width="26" height="10">
-            <use></use>
+            <use href="./img/sprite.svg#icon-arrow"></use>
           </svg>
         </button>
       </div>
