--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -87,56 +87,58 @@
       </div>
     </nav>
 
-    <!-- CONTACTS -->
-    <address class="header-address">
-      <a href="tel:+380684439426" class="header-address-link" target="_blank"
-        >+380 (68) 443-94-26</a
-      >
-    </address>
+    <div class="header-contacts">
+      <!-- CONTACTS -->
+      <address class="header-address">
+        <a href="tel:+380684439426" class="header-address-link" target="_blank"
+          >+380 (68) 443-94-26</a
+        >
+      </address>
 
-    <!-- SOCIAL NETWORKS -->
-    <div class="header-social">
-      <ul class="header-social-list">
-        <li class="header-social-list-item">
-          <a
-            href="https://www.facebook.com/goITclub/"
-            class="header-social-list-item-link"
-            target="_blank"
-          >
-            <svg class="header-social-list-item-icon" width="28" height="28">
-              <use href="./img/sprite.svg#icon-facebook"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="header-social-list-item">
-          <a
-            href="https://www.instagram.com/goitclub/"
-            class="header-social-list-item-link"
-            target="_blank"
-          >
-            <svg class="header-social-list-item-icon" width="28" height="28">
-              <use href="./img/sprite.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="header-social-list-item">
-          <a
-            href="https://www.youtube.com/c/GoIT"
-            class="header-social-list-item-link"
-            target="_blank"
-          >
-            <svg class="header-social-list-item-icon" width="28" height="28">
-              <use href="./img/sprite.svg#icon-youtube"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-      <!-- BURGER BUTTON -->
-      <button class="header-burger-btn" type="button">
-        <svg class="header-burger-btn-icon" width="44" height="30">
-          <use href="./img/sprite.svg#icon-burger"></use>
-        </svg>
-      </button>
+      <!-- SOCIAL NETWORKS -->
+      <div class="header-social">
+        <ul class="header-social-list">
+          <li class="header-social-list-item">
+            <a
+              href="https://www.facebook.com/goITclub/"
+              class="header-social-list-item-link"
+              target="_blank"
+            >
+              <svg class="header-social-list-item-icon" width="28" height="28">
+                <use href="./img/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="header-social-list-item">
+            <a
+              href="https://www.instagram.com/goitclub/"
+              class="header-social-list-item-link"
+              target="_blank"
+            >
+              <svg class="header-social-list-item-icon" width="28" height="28">
+                <use href="./img/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="header-social-list-item">
+            <a
+              href="https://www.youtube.com/c/GoIT"
+              class="header-social-list-item-link"
+              target="_blank"
+            >
+              <svg class="header-social-list-item-icon" width="28" height="28">
+                <use href="./img/sprite.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <!-- BURGER BUTTON -->
+        <button class="header-burger-btn" type="button">
+          <svg class="header-burger-btn-icon" width="44" height="30">
+            <use href="./img/sprite.svg#icon-burger"></use>
+          </svg>
+        </button>
+      </div>
     </div>
   </div>
 </header>
