--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -8,6 +8,17 @@
         wide selection of high-quality and authentic embroidery, which combines
         the elegance of traditional needlework and modern design.
       </p>
+      <p class="about-text-next">
+        In "Vyshyvanka Vibes" you will find various models of embroidery, from
+        classic to modern, corresponding to the latest fashion trends. Our
+        embroidery is made using natural fabrics and is embroidered by highly
+        qualified craftsmen who convey the beauty of Ukrainian culture in
+        every detail.We believe that vyshyvanka is not just clothing, but a
+        symbol of national pride, the heritage of our ancestors and a way of
+        expressing one's individuality. Each embroidery from "Vyshyvanka
+        Vibes" has its own unique history and symbolism, which gives it a
+        special meaning.
+      </p>
       <details>
         <summary>
           <span id="open">read more...</span>
@@ -44,3 +55,6 @@
     />
   </div>
 </section>
+
+
+
