--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -1,50 +1,62 @@
 <section class="your-order-section">
   <div class="container">
-    <img class="your-order-images" src="../img/order/order-background-desktop-max.jpg ./order/order-background-desktop-max@2x.jpg ./order/order-background-desktop-min.jpg ./order/order-background-desktop-min@2x.jpg ./order/order-background-mobile.jpg ./order/order-background-mobile@2x.jpg ./order/order-background-tablet.jpg ./order/order-background-tablet@2x.jpg" alt="a_girl_in_a_green_dress">
-<img class="your-order-picture" src="../img/order/order-img-desktop.jpg ./img/order/order-img-desktop@2x.jpg" alt="dress_and_waistcoat" />
-    <h2 class="your-order">
-      Your order
-      <span class="your-order-span"
-        >is our priority: Personalized approach and quality of service</span
-      >
-    </h2>
+    <img
+      class="your-order-images"
+      src="./img/order/order-background-desktop-max.jpg"
+      alt="a_girl_in_a_green_dress"
+    />
+    <div class="your-order-container">
+      <img
+        class="your-order-picture"
+        src="./img/order/order-img-desktop.jpg"
+        alt="dress_and_waistcoat"
+      />
     
-    <form class="your-order-form">
-      <div class="your-order-input-container">
-        <label class="" for="your-order--label">
+    <div class="your-order-container_next">
+      <h2 class="your-order">
+        Your order
+        <span class="your-order-span"
+          >is our priority: Personalized approach and quality of service</span
+        >
+      </h2>
+      <form class="your-order-form">
+        <div class="your-order-input-container">
           <inpit
             type="name"
             class="your-order-input"
             name="username"
-            placeholder="Enter your full name"
-          ></inpit
-        ></label>
-      </div>
-      <div class="your-order-input-container">
-        <label class="" for="your-order--label">
+            placeholder="Enter_your_full_name" 
+            autofocus
+          ></inpit>
+        </div>
+        <div class="your-order-input-container">
           <inpit
             type="email"
             class="your-order-input"
             name="useremail"
             placeholder="Enter your email"
-          ></inpit
-        ></label>
-      </div>
-      <div>
-        <textarea type="pattern"
-          class="your-order-textarea"
-          name="user-coment"
-          placeholder="Comments"
-          id=""
-          rows="10"
-          cols="30"
-        ></textarea>
-        <button class="your-order-link" href="index.html" type="pattern"></button>
-          Send<svg class="your-order-icon" width="26" height="10">
-            <use href="./img/sprite.svg#icon-arrow"></use>
-          </svg>
-        </button>
-      </div>
-    </form>
+          ></inpit>
+        </div>
+        <div>
+          <label class="" for="your-order--label">
+            <textarea
+              type="pattern"
+              class="your-order-textarea"
+              name="user-coment"
+              placeholder="Comments"
+              id=""
+              rows="10"
+              cols="35"
+            ></textarea>
+          </label>
+          <button class="your-order-btn" href="index.html" type="pattern">
+            Send<svg class="your-order-icon" width="26" height="10">
+              <use href="./img/sprite.svg#icon-arrow"></use>
+            </svg>
+          </button>
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
 </section>
