--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -73,6 +73,10 @@
     }
 }
 
+.hero-section{
+    position: relative;
+}
+
 .container{
     padding-left: 32px;
     padding-right: 32px;
@@ -134,6 +138,9 @@
     width: 139px;
     height: 197px;
     flex-shrink: 0;
+    position: absolute;
+    bottom: 0;
+    right: 0;
     background-image: url(../img/hero/small.jpg);
     background-repeat: no-repeat;
     background-position: top;
@@ -245,6 +252,9 @@
     width: 139px;
     height: 197px;
     flex-shrink: 0;
+    position: absolute;
+    bottom: 0;
+    right: 0;
     background-image: url(../img/hero/small.jpg);
     background-repeat: no-repeat;
     background-position: top;
